--- a/index.html
+++ b/index.html
@@ -93,17 +93,17 @@
       <img src="images/illustration-editor-mobile.svg" class=" m-auto lg:hidden	" alt="">
       <img src="images/illustration-editor-desktop.svg" class=" hidden cardPh  ml-10 lg:block " alt="">
       <div class="lg:ml-10">
-        <div class="one my-10 text-center lg:text-left mx-8 lg:mx-20">
-          <h2 class=" mb-6 text-3xl ">Introducing an extensible editor</h2>
-          <p>Blogr features an exceedingly intuitive interface which 
+        <div class="one text-center lg:text-left mx-8 lg:mx-20">
+          <h2 class=" mb-6 text-3xl md:text-4xl md:font-bold ">Introducing an extensible editor</h2>
+          <p class="text-xl font-light pr-22">Blogr features an exceedingly intuitive interface which 
             lets you focus on one thing: creating content.The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, 
             videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or 
             change the looks of a blog.
           </p>
         </div>
-        <div class="one my-10 text-center lg:text-left mx-8 lg:mx-20">
-          <h2 class=" mb-6 text-3xl ">IRobust content management</h2>
-          <p>Flexible content management enables users to easily move through posts. Increase the usability of your blog 
+        <div class="two mt-24 text-center lg:text-left mx-8 lg:mx-20">
+          <h2 class=" mb-6 text-3xl md:text-4xl md:font-bold ">IRobust content management</h2>
+          <p class="text-xl font-light pr-22">Flexible content management enables users to easily move through posts. Increase the usability of your blog 
             by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.
           </p>
         </div>
@@ -112,15 +112,15 @@
   </div>
 <!-- end futuer section  -->
 <!-- start anthing section -->
-<div class="background relative flex items-center justify-center flex-col-reverse md:h-96  w-full mt-15 mb-15  ">
+<div class="background relative flex items-center justify-center flex-col-reverse md:h-72  w-full mt-15 mb-15  ">
   <div class=" cicrcl absolute w-full h-screen overflow-hidden lg:h-96 md:h-screen md:right-8">
     <img src="images/bg-pattern-circles.svg" class="absolute" alt="">
   </div>
-  <div class="phone flex items-center justify-center flex-col mb-40 lg:flex-row z-20 lg:mt-40">
-    <img src="images/illustration-phones.svg"  alt="">
+  <div class="phone flex items-center justify-center flex-col mb-40 lg:flex-row z-20 lg:mb-0">
+    <img src="images/illustration-phones.svg" class="md:ml-20 phone-disctop"  alt="">
     <div class="discrption text-center lg:text-left mx-7 mx-20 md:mx-20 lg:mx-20 ">
-      <h1 class=" mb-6 text-3xl font-bold leading-normal ">State of the Art Infrastructure</h1>
-      <p class="text-1xl leading-normal">  With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
+      <h1 class=" mb-6 text-3xl md:text-5xl font-bold leading-normal ">State of the Art Infrastructure</h1>
+      <p class="text-1xl md:text-2xl pr-12 leading-normal">  With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
         This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.</p>
     </div>
   </div>
@@ -129,20 +129,20 @@
   <!-- start benfits section  -->
   <div class="benfits my-30">
     <div class="holder flex flex-col lg:flex-row text-center md:text-left  items-center my-32 lg:my-52">
-      <img src="images/illustration-laptop-desktop.svg" class=" m-auto lg:hidden	" alt="">
-      <img src="images/illustration-laptop-mobile.svg" class=" hidden laptop  ml-10 lg:block " alt="">
-      <div class="lg:ml-10">
-        <div class="one my-10 text-center lg:text-left mx-8 lg:mx-20">
-          <h2 class=" mb-6 text-3xl ">Free, open, simple</h2>
-          <p>  
+      <img src="images/illustration-laptop-desktop.svg" class=" m-auto lg:hidden" alt="">
+      <img src="images/illustration-laptop-mobile.svg" class=" hidden laptop ml-10 lg:block " alt="">
+      <div class="lg:ml-10 ">
+        <div class="one my-10 text-center mb-24 lg:text-left mx-8 lg:mx-20">
+          <h2 class=" mb-8 text-3xl ">Free, open, simple</h2>
+          <p class="md:text-xl leading-10 md:pr-32">  
             Blogr is a free and open source application backed by a large community of helpful developers. It supports 
             features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools, 
             and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.
           </p>
         </div>
         <div class="one my-10 text-center lg:text-left mx-8 lg:mx-20">
-          <h2 class=" mb-6 text-3xl ">Powerful tooling</h2>
-          <p>  Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze, but
+          <h2 class=" mb-8 text-3xl ">Powerful tooling</h2>
+          <p class="md:text-xl leading-10 md:pr-32">  Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze, but
             capable of producing even the most complicated sites.
           </p>
         </div>
