--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
   <div class="phone flex items-center justify-center flex-col mb-40 lg:flex-row z-20 lg:mb-0">
     <img src="images/illustration-phones.svg" class="md:ml-20 phone-disctop"  alt="">
     <div class="discrption text-center lg:text-left mx-7 mx-20 md:mx-20 lg:mx-20 ">
-      <h1 class=" mb-6 text-3xl md:text-5xl font-bold leading-normal ">State of the Art Infrastructure</h1>
-      <p class="text-1xl md:text-2xl pr-12 leading-normal">  With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
+      <h1 class=" mb-6 text-3xl md:text-5xl font-mediem leading-normal ">State of the Art Infrastructure</h1>
+      <p class="text-1xl md:text-xl pr-12 leading-normal">  With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
         This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.</p>
     </div>
   </div>
